# FCG_project_3D

./: .gitignore  00_fragment.frag  00_vertex.vert  CMakeLists.txt  README.txt  fragment.frag  imgui.ini  include.hh  main.cc  picking.frag  stages.sh  vertex.vert
data/: apple.off  bunny.off  cone.off  corner.off  cube.off  cylinder.off  dragon.off  mushroom.off  plane.off  sphere.off  teapot.off  torus.off
glad/: gl.h
include/: camera.hh  grid.hh  hotshaders.hh  imgui.hh  light.hh  mesh.hh  object.hh  scene.hh  trackball.hh
